--- a/features/referrer-policy.yml
+++ b/features/referrer-policy.yml
@@ -2,8 +2,6 @@ name: Referrer policy
 description: The `Referrer-Policy` HTTP header and `referrerpolicy` HTML attributes control whether requests have the `Referer` header and what information the header contains.
 spec: https://w3c.github.io/webappsec-referrer-policy/
 caniuse: referrer-policy
-# TODO: Align with caniuse.com if https://github.com/Fyrd/caniuse/pull/7108 lands
-# or remove this TODO if it does not.
 status:
   compute_from:
     - html.elements.a.referrerpolicy
@@ -29,3 +27,9 @@ compat_features:
   - html.elements.script.referrerpolicy
   - http.headers.Referrer-Policy
   - http.headers.Referrer-Policy.default_strict-origin-when-cross-origin
+  - http.headers.Referrer-Policy.no-referrer-when-downgrade
+  - http.headers.Referrer-Policy.origin-when-cross-origin
+  - http.headers.Referrer-Policy.same-origin
+  - http.headers.Referrer-Policy.strict-origin
+  - http.headers.Referrer-Policy.strict-origin-when-cross-origin
+  - http.headers.Referrer-Policy.unsafe-url
