--- a/features/presentation-api.yml.dist
+++ b/features/presentation-api.yml.dist
@@ -32,6 +32,7 @@ compat_features:
   - api.PresentationConnection
   - api.PresentationConnection.binaryType
   - api.PresentationConnection.id
+  - api.PresentationConnection.message_event
   - api.PresentationConnection.send
   - api.PresentationConnection.state
   - api.PresentationConnectionAvailableEvent
@@ -63,6 +64,9 @@ compat_features:
   #   chrome: "50"
   #   chrome_android: "50"
   #   edge: "79"
+  - api.PresentationConnection.close_event
+  - api.PresentationConnection.connect_event
+  - api.PresentationConnection.terminate_event
   - api.PresentationConnectionCloseEvent
   - api.PresentationConnectionCloseEvent.PresentationConnectionCloseEvent
   - api.PresentationConnectionCloseEvent.message
@@ -82,6 +86,14 @@ compat_features:
   #   edge: "79"
   - api.Presentation.receiver
   - api.PresentationConnectionList
+  - api.PresentationConnectionList.connectionavailable_event
   - api.PresentationConnectionList.connections
   - api.PresentationReceiver
   - api.PresentationReceiver.connectionList
+
+  # baseline: false
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "79"
+  - api.PresentationRequest.secure_context_required
