--- a/features/picture-in-picture.yml
+++ b/features/picture-in-picture.yml
@@ -2,12 +2,8 @@ name: Picture-in-picture (video)
 description: The picture-in-picture API allow websites to create a floating, always-on-top video window. Also known as PiP or pop-out video.
 spec: https://w3c.github.io/picture-in-picture/
 caniuse: picture-in-picture
-# TODO: Align the initial Chrome version these sources:
-# https://github.com/mdn/browser-compat-data/pull/7603 (Chrome 69)
-# https://caniuse.com/picture-in-picture (Chrome 70)
-# https://chromestatus.com/feature/5729206566649856 (Chrome 71)
-#
-# For now we will match BCD, Chrome 69.
+status:
+  compute_from: api.Document.pictureInPictureElement
 compat_features:
   - api.Document.exitPictureInPicture
   - api.Document.pictureInPictureElement
@@ -22,9 +18,8 @@ compat_features:
   - api.PictureInPictureWindow.width
   - api.ShadowRoot.pictureInPictureElement
   - html.elements.video.disablepictureinpicture
-  # Later additions:
-  # - api.PictureInPictureEvent
-  # - api.PictureInPictureEvent.PictureInPictureEvent
-  # - api.PictureInPictureEvent.pictureInPictureWindow
-  # - css.selectors.picture-in-picture
-  # - http.headers.Permissions-Policy.picture-in-picture
+  - api.PictureInPictureEvent
+  - api.PictureInPictureEvent.PictureInPictureEvent
+  - api.PictureInPictureEvent.pictureInPictureWindow
+  - css.selectors.picture-in-picture
+  - http.headers.Permissions-Policy.picture-in-picture
