Add more keys to Keyboard map

--- a/features/keyboard-map.yml.dist
+++ b/features/keyboard-map.yml.dist
@@ -10,3 +10,11 @@ status:
 compat_features:
   - api.Keyboard.getLayoutMap
   - api.KeyboardLayoutMap
+  - api.KeyboardLayoutMap.@@iterator
+  - api.KeyboardLayoutMap.entries
+  - api.KeyboardLayoutMap.forEach
+  - api.KeyboardLayoutMap.get
+  - api.KeyboardLayoutMap.has
+  - api.KeyboardLayoutMap.keys
+  - api.KeyboardLayoutMap.size
+  - api.KeyboardLayoutMap.values
