--- a/features/keyboard-map.yml
+++ b/features/keyboard-map.yml
@@ -4,3 +4,11 @@ spec: https://wicg.github.io/keyboard-map/
 compat_features:
   - api.Keyboard.getLayoutMap
   - api.KeyboardLayoutMap
+  - api.KeyboardLayoutMap.@@iterator
+  - api.KeyboardLayoutMap.entries
+  - api.KeyboardLayoutMap.forEach
+  - api.KeyboardLayoutMap.get
+  - api.KeyboardLayoutMap.has
+  - api.KeyboardLayoutMap.keys
+  - api.KeyboardLayoutMap.size
+  - api.KeyboardLayoutMap.values
