--- a/features/origin-private-file-system.yml.dist
+++ b/features/origin-private-file-system.yml.dist
@@ -69,3 +69,51 @@ compat_features:
   - api.FileSystemSyncAccessHandle.read
   - api.FileSystemSyncAccessHandle.truncate
   - api.FileSystemSyncAccessHandle.write
+
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "86"
+  #   chrome_android: "86"
+  #   edge: "86"
+  #   firefox: "111"
+  #   firefox_android: "111"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.FileSystemDirectoryHandle.@@asyncIterator
+
+  # baseline: low
+  # baseline_low_date: 2023-03-27
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "109"
+  #   edge: "108"
+  #   firefox: "111"
+  #   firefox_android: "111"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - api.FileSystemSyncAccessHandle.close.sync_version
+  - api.FileSystemSyncAccessHandle.flush.sync_version
+  - api.FileSystemSyncAccessHandle.getSize.sync_version
+  - api.FileSystemSyncAccessHandle.truncate.sync_version
+
+  # baseline: false
+  # support:
+  #   chrome: "86"
+  #   chrome_android: "86"
+  #   edge: "86"
+  #   firefox: "111"
+  #   firefox_android: "111"
+  - api.FileSystemFileHandle.createWritable
+
+  # baseline: false
+  # support:
+  #   chrome: "86"
+  #   chrome_android: "109"
+  #   edge: "86"
+  #   firefox: "111"
+  #   firefox_android: "111"
+  - api.FileSystemWritableFileStream
+  - api.FileSystemWritableFileStream.seek
+  - api.FileSystemWritableFileStream.truncate
+  - api.FileSystemWritableFileStream.write
