--- a/features/svg.yml
+++ b/features/svg.yml
@@ -296,6 +296,7 @@ compat_features:
   - css.properties.fill-rule.evenodd
   - css.properties.fill-rule.nonzero
   - css.properties.letter-spacing.svg_elements
+  - css.properties.stroke-color
   - css.properties.stroke-dasharray
   - css.properties.stroke-dasharray.none
   - css.properties.stroke-dashoffset
