Add a key to Intl

--- a/features/intl.yml
+++ b/features/intl.yml
@@ -72,6 +72,7 @@ compat_features:
   - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_unit_parameter
   - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_unitDisplay_parameter
   - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_useGrouping_parameter
+  - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_useGrouping_parameter.string_values
   - javascript.builtins.Intl.NumberFormat.format
   - javascript.builtins.Intl.NumberFormat.format.number_parameter-string_decimal
   - javascript.builtins.Intl.NumberFormat.formatRange
