--- a/features/intl.yml.dist
+++ b/features/intl.yml.dist
@@ -461,3 +461,15 @@ compat_features:
   - javascript.builtins.Intl.NumberFormat.format.number_parameter-string_decimal
   - javascript.builtins.Intl.NumberFormat.formatRange
   - javascript.builtins.Intl.NumberFormat.formatRangeToParts
+
+  # baseline: low
+  # baseline_low_date: 2023-08-01
+  # support:
+  #   chrome: "106"
+  #   chrome_android: "106"
+  #   edge: "106"
+  #   firefox: "116"
+  #   firefox_android: "116"
+  #   safari: "16.4"
+  #   safari_ios: "16.4"
+  - javascript.builtins.Intl.NumberFormat.NumberFormat.options_parameter.options_useGrouping_parameter.string_values
