Add a key to Credential Management

--- a/features/credential-management.yml
+++ b/features/credential-management.yml
@@ -23,6 +23,7 @@ status:
 compat_features:
   - api.Credential
   - api.Credential.id
+  - api.Credential.isConditionalMediationAvailable_static
   - api.Credential.type
   - api.CredentialsContainer
   - api.CredentialsContainer.create
