--- a/features/credential-management.yml.dist
+++ b/features/credential-management.yml.dist
@@ -69,3 +69,9 @@ compat_features:
   #   safari: "17"
   #   safari_ios: "17"
   - api.CredentialsContainer.preventSilentAccess
+
+  # baseline: false
+  # support:
+  #   safari: "16"
+  #   safari_ios: "16"
+  - api.Credential.isConditionalMediationAvailable_static
