--- a/features/console.yml.dist
+++ b/features/console.yml.dist
@@ -178,6 +178,19 @@ compat_features:
   - api.console.clear_static
 
   # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "31"
+  #   chrome_android: "31"
+  #   edge: "12"
+  #   firefox: "29"
+  #   firefox_android: "29"
+  #   safari: "7"
+  #   safari_ios: "7"
+  - api.console.worker_support
+
+  # baseline: high
   # baseline_low_date: 2015-11-12
   # baseline_high_date: 2018-05-12
   # support:
