--- a/features/battery.yml
+++ b/features/battery.yml
@@ -7,11 +7,13 @@ status:
 compat_features:
   - api.BatteryManager
   - api.BatteryManager.charging
-  - api.BatteryManager.chargingchange_event
   - api.BatteryManager.chargingTime
+  - api.BatteryManager.chargingchange_event
   - api.BatteryManager.chargingtimechange_event
   - api.BatteryManager.dischargingTime
   - api.BatteryManager.dischargingtimechange_event
   - api.BatteryManager.level
   - api.BatteryManager.levelchange_event
+  - api.BatteryManager.secure_context_required
   - api.Navigator.getBattery
+  - api.Navigator.getBattery.secure_context_required
