--- a/features/trusted-types.yml
+++ b/features/trusted-types.yml
@@ -2,5 +2,6 @@ name: Trusted types
 description: Trusted types allow you to lock down insecure parts of the DOM API and prevent client-side cross-site scripting (XSS) attacks.
 spec: https://w3c.github.io/trusted-types/dist/spec/
 caniuse: trusted-types
+group: security
 status:
   compute_from: api.trustedTypes
