--- a/features/webauthn.yml.dist
+++ b/features/webauthn.yml.dist
@@ -70,6 +70,30 @@ compat_features:
   #   safari_ios: "16"
   - api.AuthenticatorAttestationResponse.getTransports
 
+  # baseline: low
+  # baseline_low_date: 2023-10-24
+  # support:
+  #   chrome: "108"
+  #   chrome_android: "108"
+  #   edge: "108"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  #   safari: "16"
+  #   safari_ios: "16"
+  - api.PublicKeyCredential.isConditionalMediationAvailable_static
+
+  # baseline: low
+  # baseline_low_date: 2023-11-21
+  # support:
+  #   chrome: "98"
+  #   chrome_android: "98"
+  #   edge: "98"
+  #   firefox: "120"
+  #   firefox_android: "120"
+  #   safari: "15.5"
+  #   safari_ios: "15.5"
+  - api.PublicKeyCredential.authenticatorAttachment
+
   # baseline: false
   # support:
   #   chrome: "89"
@@ -99,6 +123,17 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "129"
+  #   chrome_android: "129"
+  #   edge: "129"
+  #   firefox: "119"
+  #   firefox_android: "119"
+  - api.PublicKeyCredential.parseCreationOptionsFromJSON_static
+  - api.PublicKeyCredential.parseRequestOptionsFromJSON_static
+  - api.PublicKeyCredential.toJSON
+
+  # baseline: false
+  # support:
   #   chrome: "89"
   #   chrome_android: "108"
   #   edge: "89"
@@ -111,6 +146,14 @@ compat_features:
   #   chrome_android: "76"
   #   edge: "79"
   - api.CredentialsContainer.create.publicKey_option.extensions.credProtect
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.publickey-credentials-create
+  - http.headers.Permissions-Policy.publickey-credentials-get
 
   # baseline: false
   # support:
@@ -132,3 +175,9 @@ compat_features:
   #   chrome_android: "113"
   #   edge: "113"
   - api.CredentialsContainer.get.publicKey_option.extensions.largeBlob
+
+  # baseline: false
+  # support:
+  #   safari: "17.4"
+  #   safari_ios: "17.4"
+  - api.PublicKeyCredential.getClientCapabilities_static
