--- a/features/webgl.yml
+++ b/features/webgl.yml
@@ -37,14 +37,20 @@ compat_features:
   - api.WebGLActiveInfo.name
   - api.WebGLActiveInfo.size
   - api.WebGLActiveInfo.type
+  - api.WebGLActiveInfo.worker_support
   - api.WebGLBuffer
+  - api.WebGLBuffer.worker_support
   - api.WebGLContextEvent
-  - api.WebGLContextEvent.statusMessage
   - api.WebGLContextEvent.WebGLContextEvent
+  - api.WebGLContextEvent.statusMessage
+  - api.WebGLContextEvent.worker_support
   - api.WebGLFramebuffer
+  - api.WebGLFramebuffer.worker_support
   - api.WebGLObject
   - api.WebGLProgram
+  - api.WebGLProgram.worker_support
   - api.WebGLRenderbuffer
+  - api.WebGLRenderbuffer.worker_support
   - api.WebGLRenderingContext
   - api.WebGLRenderingContext.activeTexture
   - api.WebGLRenderingContext.attachShader
@@ -187,10 +193,15 @@ compat_features:
   - api.WebGLRenderingContext.vertexAttrib4fv
   - api.WebGLRenderingContext.vertexAttribPointer
   - api.WebGLRenderingContext.viewport
+  - api.WebGLRenderingContext.worker_support
   - api.WebGLShader
+  - api.WebGLShader.worker_support
   - api.WebGLShaderPrecisionFormat
   - api.WebGLShaderPrecisionFormat.precision
   - api.WebGLShaderPrecisionFormat.rangeMax
   - api.WebGLShaderPrecisionFormat.rangeMin
+  - api.WebGLShaderPrecisionFormat.worker_support
   - api.WebGLTexture
+  - api.WebGLTexture.worker_support
   - api.WebGLUniformLocation
+  - api.WebGLUniformLocation.worker_support
