Use text-underline-offset as compute_from

--- a/features/text-underline-position.yml
+++ b/features/text-underline-position.yml
@@ -3,7 +3,7 @@ description: "The `text-underline-position` and `text-underline-offset` CSS prop
 spec: https://drafts.csswg.org/css-text-decor-4/#line-decoration
 group: text
 status:
-  compute_from: css.properties.text-underline-position
+  compute_from: css.properties.text-underline-offset
 compat_features:
   - css.properties.text-underline-offset
   - css.properties.text-underline-offset.auto
