Add cssom group

--- a/features/css-escape.yml
+++ b/features/css-escape.yml
@@ -1,5 +1,6 @@
 name: CSS.escape()
 description: The `CSS.escape()` method escapes a string so that it can be used as a valid CSS selector.
 spec: https://drafts.csswg.org/cssom-1/#the-css.escape()-method
+group: cssom
 compat_features:
   - api.CSS.escape_static
