--- a/features/css-object-model.yml
+++ b/features/css-object-model.yml
@@ -1,6 +1,7 @@
 name: CSS Object Model
 description: The CSS Object Model allows users to create and change CSS styles using JavaScript. Also known as CSSOM.
 spec: https://drafts.csswg.org/cssom-1/#css-object-model
+group: cssom
 compat_features:
   - api.CSS
   - api.CSSGroupingRule
