--- a/features/get-computed-style.yml
+++ b/features/get-computed-style.yml
@@ -2,6 +2,7 @@ name: getComputedStyle()
 description: The `getComputedStyle()` method returns the values of all CSS properties applied to an element.
 spec: https://drafts.csswg.org/cssom-1/#extensions-to-the-window-interface
 caniuse: getcomputedstyle
+group: cssom
 compat_features:
   - api.Window.getComputedStyle
   - api.Window.getComputedStyle.pseudo_element_support
