--- a/features/client-identification.yml
+++ b/features/client-identification.yml
@@ -1,4 +1,4 @@
-name: Client identification (user agent)
+name: User agent sniffing
 description: "The `navigator.userAgent` read-only property returns the user agent string for the current browser."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
 compat_features:
