--- a/features/online.yml
+++ b/features/online.yml
@@ -1,5 +1,5 @@
 name: Online status
-description: "The `navigator.onLine` property returns a boolean value for the online status of the browser, with true meaning online and false meaning offline. The `online` and `offline` events communicate changes in this state, and are supported in windows and workers."
+description: "The `navigator.onLine` property returns a Boolean for whether the browser is connected to some network (though not necessarily the internet).
 spec:
   - https://html.spec.whatwg.org/multipage/system-state.html#navigator.online
   - https://html.spec.whatwg.org/multipage/indices.html#event-online
