desc fix for online

--- a/features/online.yml
+++ b/features/online.yml
@@ -1,5 +1,5 @@
 name: Online status
-description: "The `navigator.onLine` property returns a Boolean for whether the browser is connected to some network (though not necessarily the internet).
+description: The `navigator.onLine` property returns a Boolean for whether the browser is connected to some network (though not necessarily the internet). The `online` and `offline` events fire when the connection state changes.
 spec:
   - https://html.spec.whatwg.org/multipage/system-state.html#navigator.online
   - https://html.spec.whatwg.org/multipage/indices.html#event-online
