Drop mention of time since document loaded

--- a/features/scroll-driven-animations.yml
+++ b/features/scroll-driven-animations.yml
@@ -1,5 +1,5 @@
 name: Scroll-driven animations
-description: The `animation-timeline`, `scroll-timeline`, and `view-timeline` CSS properties advance animations based on the user's scroll position, instead of the time since the document loaded.
+description: The `animation-timeline`, `scroll-timeline`, and `view-timeline` CSS properties advance animations based on the user's scroll position.
 spec: https://drafts.csswg.org/scroll-animations-1/
 group:
   - scrolling
