`scroll-driven-animations`: revise description for search (#2020)
This is intended to improve the findability of this feature via its
most-visible properties.

Fixes https://github.com/web-platform-dx/web-features/issues/2004
Fixes https://github.com/web-platform-dx/web-features/issues/2003
Fixes https://github.com/web-platform-dx/web-features/issues/2002

--- a/features/scroll-driven-animations.yml
+++ b/features/scroll-driven-animations.yml
@@ -1,5 +1,5 @@
 name: Scroll-driven animations
-description: CSS scroll-driven animations are a type of CSS animations that don't run over time, but are instead driven by the user's scroll position.
+description: The `animation-timeline`, `scroll-timeline`, and `view-timeline` CSS properties advance animations based on the user's scroll position.
 spec: https://drafts.csswg.org/scroll-animations-1/
 group:
   - scrolling
