--- a/features/user-agent-sniffing.yml
+++ b/features/user-agent-sniffing.yml
@@ -1,5 +1,5 @@
 name: User agent sniffing
-description: "The `navigator.userAgent` read-only property returns the user agent string for the current browser. Browser identification based on detecting the user agent string is unreliable and is not recommended."
+description: "The `navigator.userAgent` read-only property returns the user agent string for the current browser. Selectively showing content based on the user agent string is unreliable. Consider using feature detection instead."
 spec: https://html.spec.whatwg.org/multipage/system-state.html#the-navigator-object
 compat_features:
   - api.Navigator.userAgent
