--- a/features/clear-site-data.yml
+++ b/features/clear-site-data.yml
@@ -1,6 +1,5 @@
-draft_date: 2024-10-21
-name: Clear Site Data
-description: TODO
+name: Clearing site data
+description: The `Clear-Site-Data header` deletes browsing data (cookies, storage, cache) associated with the requesting website.
 spec: https://w3c.github.io/webappsec-clear-site-data/
 compat_features:
   - http.headers.Clear-Site-Data
@@ -10,3 +9,4 @@ compat_features:
   - http.headers.Clear-Site-Data.executionContexts
   - http.headers.Clear-Site-Data.secure_context_required
   - http.headers.Clear-Site-Data.storage
+  # - http.headers.Clear-Site-Data.wildcard
