--- a/features/payment-handler.yml.dist
+++ b/features/payment-handler.yml.dist
@@ -8,6 +8,13 @@ status:
     chrome_android: "70"
     edge: "79"
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "66"
+  #   chrome_android: "66"
+  #   edge: "79"
+  - api.Permissions.permission_payment-handler
+
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
@@ -29,6 +36,9 @@ compat_features:
   - api.PaymentRequestEvent.respondWith
   - api.PaymentRequestEvent.topOrigin
   - api.PaymentRequestEvent.total
+  - api.ServiceWorkerGlobalScope.canmakepayment_event
+  - api.ServiceWorkerGlobalScope.paymentrequest_event
+  - api.ServiceWorkerRegistration.paymentManager
 
   # baseline: false
   # support:
@@ -47,6 +57,13 @@ compat_features:
   - api.PaymentRequestEvent.changeShippingOption
   - api.PaymentRequestEvent.paymentOptions
   - api.PaymentRequestEvent.shippingOptions
+
+  # baseline: false
+  # support:
+  #   chrome: "88"
+  #   chrome_android: "88"
+  #   edge: "88"
+  - http.headers.Permissions-Policy.payment
 
   # baseline: false
   # support: {}
