--- a/features/gamepad-extensions.yml
+++ b/features/gamepad-extensions.yml
@@ -1,5 +1,5 @@
 name: Gamepad extensions
-description: The Gamepad Extensions API allows developers to seamlessly interface with gamepad-like devices with advanced capabilities, such as controllers for XR headsets.
+description: The `gamepad.hand` and `gamepad.pose` properties of the Gamepad API represent the position in space and the hand that WebXR controllers are being held in.
 spec: https://w3c.github.io/gamepad/extensions.html
 group: gamepad
 status:
