--- a/features/font-variant-emoji.yml.dist
+++ b/features/font-variant-emoji.yml.dist
@@ -6,3 +6,7 @@ status:
   support: {}
 compat_features:
   - css.properties.font-variant-emoji
+  - css.properties.font-variant-emoji.emoji
+  - css.properties.font-variant-emoji.normal
+  - css.properties.font-variant-emoji.text
+  - css.properties.font-variant-emoji.unicode
