--- a/features/dom.yml
+++ b/features/dom.yml
@@ -1,5 +1,5 @@
 name: DOM Standard
-description: "The DOM (Document Object Model) is an API for working with documents by modeling them as a tree of nodes. TODO: add some of the parts"
+description: "The DOM (Document Object Model) is an API for working with documents by modeling them as trees of nodes.  You can change a document's structure, style, or content using this API via JavaScript."
 spec: https://dom.spec.whatwg.org/
 status:
   compute_from: api.Document
