--- a/features/mutationobserver.yml
+++ b/features/mutationobserver.yml
@@ -1,6 +1,6 @@
 name: MutationObserver
-description: TODO
-spec: https://dom.spec.whatwg.org/
+description: "`MutationObserver` watches for changes being made to the DOM tree and invokes a specified callback function when DOM changes occur."
+spec: https://dom.spec.whatwg.org/#interface-mutationobserver
 compat_features:
   - api.MutationObserver
   - api.MutationObserver.MutationObserver
