--- a/features/compute-pressure.yml.dist
+++ b/features/compute-pressure.yml.dist
@@ -20,4 +20,5 @@ compat_features:
   - api.PressureRecord.state
   - api.PressureRecord.time
   - api.PressureRecord.toJSON
+  - html.elements.iframe.allow.compute-pressure
   - http.headers.Permissions-Policy.compute-pressure
