--- a/features/idle-detection.yml.dist
+++ b/features/idle-detection.yml.dist
@@ -13,6 +13,7 @@ compat_features:
   #   chrome: "94"
   #   chrome_android: "94"
   #   edge: "94"
+  - html.elements.iframe.allow.idle-detection
   - http.headers.Permissions-Policy.idle-detection
 
   # ⬇️ Same status as overall feature ⬇️
