--- a/features/draft/spec/clear-site-data.yml.dist
+++ b/features/draft/spec/clear-site-data.yml.dist
@@ -16,16 +16,8 @@ compat_features:
   #   safari: "17"
   #   safari_ios: "17"
   - http.headers.Clear-Site-Data
-  - http.headers.Clear-Site-Data.secure_context_required
-
-  # baseline: false
-  # support:
-  #   chrome: "61"
-  #   chrome_android: "61"
-  #   edge: ≤79
-  #   firefox: "63"
-  #   firefox_android: "63"
   - http.headers.Clear-Site-Data.cookies
+  - http.headers.Clear-Site-Data.secure_context_required
   - http.headers.Clear-Site-Data.storage
 
   # baseline: false
@@ -33,6 +25,8 @@ compat_features:
   #   chrome: "61"
   #   chrome_android: "61"
   #   edge: ≤79
+  #   safari: "17"
+  #   safari_ios: "17"
   - http.headers.Clear-Site-Data.cache
 
   # baseline: false
