--- a/features/screen-wake-lock.yml.dist
+++ b/features/screen-wake-lock.yml.dist
@@ -22,6 +22,7 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.WakeLock
+  - html.elements.iframe.allow.screen-wake-lock
 
   # ⬇️ Same status as overall feature ⬇️
   # baseline: false
