--- a/.github/workflows/bcd_upgrade_checklist.yml
+++ b/.github/workflows/bcd_upgrade_checklist.yml
@@ -22,12 +22,15 @@ jobs:
         with:
           issue-number: ${{ github.event.number }}
           body: |
-            Complete this checklist for every `@mdn/browser-compat-data` upgrade PR:
+            Complete this checklist for every `@mdn/browser-compat-data` upgrade PR.
 
             - [ ] Check out this branch locally.
-            - [ ] If any keys were removed in the release, delete them from `.yml` files.
-            - [ ] Run `npm install && npm run dist && npm test && git commit --all --message="Refresh dist"`.
-            - [ ] Review the diff. Watch out for Baseline regressions; if applicable, add a comment (see https://github.com/web-platform-dx/web-features/issues/1971).
-            - [ ] Start a PR to [publish the next web-features release](https://github.com/web-platform-dx/web-features/blob/main/docs/publishing.md#regular-releases).
+            - [ ] If any keys were removed in the release, delete them from `.yml` files and commit your changes.
+            - [ ] Run `npm install && npm run dist && npm test && git commit --all --message="Refresh dist" && git push`.
+            - [ ] Review the diff. Watch out for Baseline regressions; if applicable, add a comment (see [#1971](/web-platform-dx/web-features/issues/1971)).
             - [ ] Merge this PR.
+
+            After merging, do these steps:
+
+            - [ ] Start a PR to [publish the next web-features release](https://github.com/web-platform-dx/web-features/blob/main/docs/publishing.md#regular-releases).
             - [ ] [Trigger a drafts update workflow run](https://github.com/web-platform-dx/web-features/actions/workflows/update_draft_features_weekly.yml).
