--- a/features/relative-color.yml
+++ b/features/relative-color.yml
@@ -3,15 +3,15 @@ description: "The `from` keyword for color functions (`color()`, `hsl()`, `oklch
 spec: https://drafts.csswg.org/css-color-5/#relative-colors
 group: css
 caniuse: css-relative-colors
-# TODO: Full implementation in Chromium 125, Safari 18, Firefox 128.
-# This will move baseline_low from 2024-07-09 to 2024-10-??.
-# Caniuse also needs cleanup- see https://github.com/Fyrd/caniuse/issues/7191
+# TODO: Sort out support with https://github.com/mdn/browser-compat-data/issues/24528 
+# Support for Relative colors in Chromium 119, Safari 16.4, Firefox 128.
+# Support for currentColor in relative colors in Chromium 131, Safari 16.4, Firefox 133. 
+# We don't need separate features, but should pin the feature on one of those.
 compat_features:
   # These are the only two features that don't use partial implementation for
   # some browser, so they can represent initial support for the feature.
   - css.types.color.lab.relative_syntax
   - css.types.color.oklab.relative_syntax
-  # Following BCD keys pending https://github.com/mdn/browser-compat-data/issues/24528.
   # - css.types.color.color.relative_syntax
   # - css.types.color.hsl.relative_syntax
   # - css.types.color.hwb.relative_syntax
