--- a/features/payment-request.yml
+++ b/features/payment-request.yml
@@ -39,3 +39,4 @@ compat_features:
   - api.PaymentResponse.shippingAddress
   - api.PaymentResponse.shippingOption
   - api.PaymentResponse.toJSON
+  - http.headers.Permissions-Policy.payment
