--- a/features/css-object-model.yml
+++ b/features/css-object-model.yml
@@ -1,5 +1,5 @@
-name: CSS Object Model
-description: The CSS Object Model allows users to create and change CSS styles using JavaScript. Also known as CSSOM.
+name: CSS object model
+description: The CSS object model API reads, creates, and modifies CSS stylesheets and inline styles. Also known as CSSOM.
 spec: https://drafts.csswg.org/cssom-1/#css-object-model
 group: cssom
 status:
