--- a/features/get-computed-style.yml
+++ b/features/get-computed-style.yml
@@ -1,5 +1,5 @@
 name: getComputedStyle()
-description: The `getComputedStyle()` method returns the values of all CSS properties applied to an element.
+description: The `getComputedStyle()` global method returns an `CSSStyleDeclaration` object that represents all CSS declarations applied to a given element.
 spec: https://drafts.csswg.org/cssom-1/#extensions-to-the-window-interface
 caniuse: getcomputedstyle
 group: cssom
