--- a/groups/cssom.yml
+++ b/groups/cssom.yml
@@ -1,3 +1,3 @@
-name: CSS Object Models
+name: CSS object models
 # description: The CSS Object Model (CSSOM) and CSS Typed Object Model allow authors to programmatically interact with CSS with JavaScript.
 parent: css
