--- a/features/alternative-style-sheets.yml
+++ b/features/alternative-style-sheets.yml
@@ -1,5 +1,5 @@
 name: Alternative style sheets
-description: The `rel="alternate stylesheet"` flag provides an alternative style option for users.
+description: The `rel="alternate stylesheet"` attribute for the `<link>` HTML element offers an alternative style option to users.
 spec: https://drafts.csswg.org/cssom-1/#concept-css-style-sheet-alternate-flag
 group: css
 compat_features:
