--- a/features/long-animation-frames.yml
+++ b/features/long-animation-frames.yml
@@ -1,5 +1,5 @@
-name: Long animation frames (LoAFs)
-description: The `long-animation-frame` performance event type and the `PerformanceLongAnimationFrameTiming` API provide information about rendering updates which are delayed by 50 milliseconds or more.
+name: Long animation frames
+description: The `long-animation-frame` performance event type and the `PerformanceLongAnimationFrameTiming` API provide information about rendering updates that take longer than 50 milliseconds. Also known as LoAFs.
 spec: https://w3c.github.io/long-animation-frames/
 group: performance
 compat_features:
