Adds keys to multi-column and page-breaks

--- a/features/page-breaks.yml
+++ b/features/page-breaks.yml
@@ -17,6 +17,7 @@ compat_features:
   - css.properties.break-after.paged_context
   - css.properties.break-after.paged_context.avoid-page
   - css.properties.break-after.paged_context.page
+  - css.properties.break-after.paged_context.recto
   - css.properties.break-after.recto
   - css.properties.break-after.right
   - css.properties.break-after.verso
@@ -29,6 +30,7 @@ compat_features:
   - css.properties.break-before.page
   - css.properties.break-before.paged_context
   - css.properties.break-before.paged_context.page
+  - css.properties.break-before.paged_context.recto
   - css.properties.break-before.recto
   - css.properties.break-before.right
   - css.properties.break-before.verso
