--- a/.github/ISSUE_TEMPLATE/new-feature.yml
+++ b/.github/ISSUE_TEMPLATE/new-feature.yml
@@ -23,7 +23,7 @@ body:
 - type: textarea
   attributes:
     label: Documentation
-    description: Link(s) to documentation and/or demos of the feature.
+    description: Link to documentation and demos of the feature.
   validations:
     required: true
 - type: textarea
