Request docs/demos link in the new feature issue template (#1954)
Add a new textarea to the new feature issue template where reporters can add links to docs and/or demos.

This would be useful to help maintain the mapping between new web-features and MDN docs.

--- a/.github/ISSUE_TEMPLATE/new-feature.yml
+++ b/.github/ISSUE_TEMPLATE/new-feature.yml
@@ -22,5 +22,11 @@ body:
     required: true
 - type: textarea
   attributes:
+    label: Documentation
+    description: Link to documentation and demos of the feature.
+  validations:
+    required: true
+- type: textarea
+  attributes:
     label: Browser support
     description: If you have a caniuse.com link or other information about browser support, please share here.
