Add security group to more features

--- a/features/web-cryptography.yml
+++ b/features/web-cryptography.yml
@@ -4,6 +4,7 @@ spec:
   - https://w3c.github.io/webcrypto/
   - https://wicg.github.io/webcrypto-secure-curves/
 caniuse: cryptography
+group: security
 status:
   compute_from: api.Crypto
 compat_features:
