Add additional overflow keys

--- a/features/line-clamp.yml
+++ b/features/line-clamp.yml
@@ -3,3 +3,6 @@ description: "The `line-clamp` CSS property limits the text in a block container
 spec: https://drafts.csswg.org/css-overflow-4/#line-clamp
 group: css
 caniuse: css-line-clamp
+compat_features:
+  - css.properties.line-clamp
+  - css.properties.line-clamp.none
