--- a/features/logical-properties.yml.dist
+++ b/features/logical-properties.yml.dist
@@ -210,3 +210,10 @@ compat_features:
   #   firefox_android: "79"
   - css.properties.overflow-block
   - css.properties.overflow-inline
+
+  # baseline: false
+  # support:
+  #   firefox: "112"
+  #   firefox_android: "112"
+  - css.properties.overflow-block.overlay
+  - css.properties.overflow-inline.overlay
