--- a/features/file-system-access.yml.dist
+++ b/features/file-system-access.yml.dist
@@ -4,8 +4,8 @@
 status:
   baseline: false
   support:
-    chrome: "108"
-    edge: "108"
+    chrome: "86"
+    edge: "86"
 compat_features:
   # baseline: low
   # baseline_low_date: 2023-03-27
@@ -18,21 +18,6 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.FileSystemDirectoryHandle.@@asyncIterator
-
-  # baseline: low
-  # baseline_low_date: 2023-03-27
-  # support:
-  #   chrome: "108"
-  #   chrome_android: "109"
-  #   edge: "108"
-  #   firefox: "111"
-  #   firefox_android: "111"
-  #   safari: "16.4"
-  #   safari_ios: "16.4"
-  - api.FileSystemSyncAccessHandle.close.sync_version
-  - api.FileSystemSyncAccessHandle.flush.sync_version
-  - api.FileSystemSyncAccessHandle.getSize.sync_version
-  - api.FileSystemSyncAccessHandle.truncate.sync_version
 
   # baseline: false
   # support:
@@ -63,6 +48,7 @@ compat_features:
   - api.FileSystemHandle.queryPermission
   - api.FileSystemHandle.requestPermission
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "86"
