Add missing shape keys

--- a/features/shape-outside.yml
+++ b/features/shape-outside.yml
@@ -15,3 +15,4 @@ compat_features:
   - css.properties.shape-outside.inset
   - css.properties.shape-outside.path
   - css.properties.shape-outside.polygon
+  - css.properties.shape-image-threshold.percentages
