--- a/features/shapes.yml
+++ b/features/shapes.yml
@@ -13,4 +13,5 @@ compat_features:
   - css.types.basic-shape.inset
   - css.types.basic-shape.polygon
   - css.types.basic-shape.rect
+  - css.types.basic-shape.shape
   - css.types.basic-shape.xywh
