--- a/features/shapes.yml.dist
+++ b/features/shapes.yml.dist
@@ -41,3 +41,7 @@ compat_features:
   #   safari_ios: "17.2"
   - css.types.basic-shape.rect
   - css.types.basic-shape.xywh
+
+  # baseline: false
+  # support: {}
+  - css.types.basic-shape.shape
